0.9.2
 - Allow to set contour levels at quantiles instead of KDE fractions (#180)
 - Allow to manually select contour levels
 - Pin numpy version to <=1.13.0 to prevent ValueError caused
   by chaco testing whether an array object is contained in another
   object
0.9.1
 - Add tooltips for box filter settings
 - Rename *Statistical analysis* to *Statistical summary* in batch menu
 - Add link to documentation in help menu
 - Major documentation update
 - Bugfixes:
   - Remove temporary session-save directory when autosaving fails due to
     nonexisting analysis
   - Several minor fixes in dclab 0.9.1
0.9.0
 - Introduce new online documentation at http://shapeout.readthedocs.io
 - Consistently use the term Shape-Out
 - Code cleanup and compatibility with dclab 0.8.0
 - Enhancements:
   - Order input fields in measurement browser according
     to measurement number (#229)
   - Support new features "temperature" and "ambient temperature"
     (dclab 0.9.0)
 - Bugfixes:
   - Displaying the contour of .rtdc files that do not contain
     the "mask" feature resulted in an error.
   - ValueError in settings.py when stored data does not contain a
     key-value pair or when the value is missing.
   - IndexError when clicking on an event that has no image data
   - When the titles of all measurements are identical, the measurement
     selection in the combobox does not have any effect on the displayed
     measurement when creating a new polygon filter.
   - Possible errors when loading sessions containing empty datasets
0.8.8
 - Bugfixes:
   - "Mean of empty slice" error when attempting to plot bad data 
 - New ancillary features in expert mode:
   - Principal inertia ratio (dclab 0.6.3.dev1)
   - Absolute tilt of raw contour (dclab 0.6.3.dev2)
 - Add computation of Young's modulus for water medium (dclab 0.6.3.dev14)
 - Show fluorescence metadata in Information tab
 - Display data paths as tool tip in title editor (Contour Plot tab) (#227)
0.8.7
 - Bugfixes: